Fix ImageController to return  on the webpage and resolve constructor error in PaginationResponseDto